--- a/public/index.html
+++ b/public/index.html
@@ -80,13 +80,17 @@
 
 		</div>
 
+		<div id="snack" >
+
+		</div>
+
 		<div class="addGarment" >
 			
-			<div class="add button mt1 hidden" >
+			<div class="add button mt1" >
 				<a href="">Add garmet</a>
 			</div>
 
-			<div class="add garment hidden">
+			<div class="add garment">
 				<h2>Add garment</h2>
 				<img src="/images/{{img}}" alt="">
 
